<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  TrafficInfoGrabber
  %%
  Copyright (C) 2010 - 2014 Patrick Decat
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->
<resources>

    <string name="app_name">TrafficInfoGrabber</string>
    <string name="app_version">${project.version}</string>

    <!-- Activities -->
    <string name="preferencesEditor">TIG - Preferences Editor</string>
    <string name="activitySelector">TIG - Activity Selector</string>

    <!-- Menu items -->
    <string name="switchView">Switch View</string>
    <string name="liveTraffic">Live Traffic</string>
    <string name="liveTrafficLite">Live Traffic Lite</string>
    <string name="closedAtNight">Closed At Night</string>
    <string name="quickStats">Quick statistics</string>
    <string name="trafficCollisions">Traffic Collisions</string>
    <string name="sytadinWebsite">www.sytadin.fr</string>
    <string name="infotraficWebsite">www.infotrafic.com</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>

    <!-- View items -->
    <string name="refresh">Refresh</string>

    <!-- Miscellaneous -->
    <string name="newVersionShowPreferences">This is the first time you launch TIG %1$s. Would you like to update your preferences?</string>
    <string name="no_third_party_activity_set_in_preferences">No third party activity set in preferences…</string>
    <string name="error_while_launching_third_party_activity">Error while launching third party activity&#160;</string>
    <string name="error_while_launching_website">Error while launching %1$s website</string>
    <string name="fetching_activities">Fetching activities…</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="NO_APP_SELECTED">No application selected</string>
    <string name="page_load_timed">Page load timed out, trigger a refresh…</string>
    <string name="failed_to_start_activity_for_intent">Failed to start activity \'%1$s\'</string>
    <string name="install_oi_about">TIG requires \'OI About\' to show About dialog. Install OI About from Market?</string>
    <string name="last_update">Last update…</string>
    
    <!-- Retry count down items -->
    <string name="countDownRefreshingIn">Refreshing in&#160;</string>
    <string name="countDownUnits">s</string>
    <string name="countDownClickToCancel">Click to cancel</string>

    <!-- Buttons -->
    <string name="thirdPartyAppButtonDescription">Third Party App</string>
    <string name="quitButtonDescription">Quit</string>
    <string name="dayNightSwitchButtonDescription">Day/Night Switch</string>
    <string name="refreshButtonDescription">Refresh</string>

    <!-- Preferences labels -->
    <string name="PREFS_CATEGORY_INTERFACE_SUMMARY">Adapt the interface to your taste</string>
    <string name="PREFS_CATEGORY_INTERFACE_TITLE">Interface</string>
    <string name="LT_CARTO_SUMMARY">Light Traffic Cartography</string>
    <string name="LT_CARTO_TITLE">Cartography</string>
    <string name="SHOW_REFRESH_BUTTON">Refresh button</string>
    <string name="SHOW_REFRESH_BUTTON_SUMMARY">Allows to refresh the current view</string>
    <string name="SHOW_DAY_NIGHT_SWITCH_BUTTON">Day Night Switch button</string>
    <string name="SHOW_DAY_NIGHT_SWITCH_BUTTON_SUMMARY">Allows to switch between day and night mode</string>
    <string name="SHOW_QUIT_BUTTON">Quit button</string>
    <string name="SHOW_QUIT_BUTTON_SUMMARY">Allows to quit the application (long press to kill the process)</string>
    <string name="FORCE_PORTRAIT_ORIENTATION">Force portrait orientation</string>
    <string name="FORCE_PORTRAIT_ORIENTATION_SUMMARY">Avoids unwanted orientation changes</string>
    <string name="USE_HD">HD views</string>
    <string name="USE_HD_SUMMARY">Display the traffic view in HD when available</string>
    <string name="OTHER_ACTIVITY">Preferred third party app</string>
    <string name="OTHER_ACTIVITY_SUMMARY">Press Search to launch this app</string>
    <string name="SHOW_THIRD_PARTY_APP_BUTTON_SUMMARY">Allows to launch a third party application</string>
    <string name="SHOW_THIRD_PARTY_APP_BUTTON_TITLE">Third party app button</string>
    <string name="PREFS_CATEGORY_NOTIFICATIONS_SUMMARY">Define notifications settings</string>
    <string name="PREFS_CATEGORY_NOTIFICATIONS_TITLE">Notification</string>
    <string name="NOTIFICATION_SHORTCUT">Notification shortcut</string>
    <string name="NOTIFICATION_SHORTCUT_SUMMARY">Add a notification to access TIG quickly</string>
    <string name="NOTIFICATION_SHORTCUT_ON_BOOT">Trigger on boot</string>
    <string name="NOTIFICATION_SHORTCUT_ON_BOOT_SUMMARY">Upon booting, add a notification to launch TIG</string>
    <string name="PREFS_CATEGORY_OTHER_SUMMARY">Other settings you may want to adjust</string>
    <string name="PREFS_CATEGORY_OTHER_TITLE">Other</string>
    <string name="PREF_ADS_SUMMARY">Support this project\'s developer displaying ads while loading</string>
    <string name="PREF_ADS_TITLE">Non intrusive ads</string>
    <string name="PREFS_CATEGORY_CAR_MODE_SUMMARY">Define desired behaviour on Car Mode changes</string>
    <string name="PREFS_CATEGORY_CAR_MODE_TITLE">Car Mode (Android 2.2+)</string>
    <string name="LAUNCH_TIG_ON_ENTER_CAR_DOCK_SUMMARY">TIG will be started or brought back to the foreground</string>
    <string name="LAUNCH_TIG_ON_ENTER_CAR_DOCK_TITLE">Launch on entering Car Mode</string>
    <string name="QUIT_TIG_ON_EXIT_CAR_DOCK_SUMMARY">TIG will be finished</string>
    <string name="QUIT_TIG_ON_EXIT_CAR_DOCK_TITLE">Quit on exiting Car Mode</string>

    <!-- Preferences labels & values -->
    <string name="PREF_LLT_IDF_HTML_LABEL">Full</string>
    <string name="PREF_LLT_FULL_HTML_LABEL">Ile-de-France</string>
    <string name="PREF_LLT_IDF_HTML_VALUE">FILENAME_LLT_IDF_HTML</string>
    <string name="PREF_LLT_FULL_HTML_VALUE">FILENAME_LLT_FULL_HTML</string>
    <string name="PREF_ADS_ALWAYS_LABEL">Always display ads, the developer deserves credit!</string>
    <string name="PREF_ADS_ATLOAD_LABEL">Display ads while loading traffic information, just my 2cts…</string>
    <string name="PREF_ADS_NEVER_LABEL">I hate ads and don\'t give a damn about the developer\'s motivation :(</string>
    <string name="PREF_ADS_ALWAYS_VALUE">always</string>
    <string name="PREF_ADS_ATLOAD_VALUE">atLoad</string>
    <string name="PREF_ADS_NEVER_VALUE">never</string>
    
    <!-- Notifications -->
    <string name="notificationLabel">Launch TIG</string>
    <string name="notificationMessage">Shortcut to launch TIG…</string>

    <!-- Strings for About dialog -->
    <string name="about_comments">A simple traffic information grabber</string>
    <string name="about_copyright">Copyright © 2010–2012 Patrick Decat</string>
    <string name="about_website_label">TrafficInfoGrabber at Google Code</string>
    <string name="about_website_url">http://dear2dear.googlecode.com/svn/trunk/tig/TrafficInfoGrabber/</string>
    <string name="about_email">pdecat%2Btig@gmail.com</string>
</resources>
