<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  TrafficInfoGrabber
  %%
  Copyright (C) 2010 - 2012 Patrick Decat
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/adview" />

    <LinearLayout
        android:id="@+id/nightModeLayer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/actionbar_bg"
        android:visibility="invisible" />
    
    <LinearLayout
        android:id="@+id/retryCountDown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="50"
        android:background="#bbeeeeee"
        android:gravity="center"
        android:onClick="cancelRetryCountDown"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="invisible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countDownRefreshingIn"
            android:textColor="#000000"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/retryCountDownText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="60sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countDownUnits"
                android:textColor="#000000"
                android:textSize="60sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/countDownClickToCancel"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/thirdPartyAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#0000"
        android:contentDescription="@string/thirdPartyAppButtonDescription"
        android:onClick="launchThirdPartyApp"
        android:paddingLeft="5dp"
        android:paddingTop="@dimen/third_party_app_button_padding_top"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#0000"
        android:contentDescription="@string/quitButtonDescription"
        android:onClick="quit"
        android:paddingRight="5dp"
        android:paddingTop="@dimen/power_button_padding_top"
        android:src="@drawable/ic_lock_power_off" />

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adviewLayout"
        android:layout_centerInParent="true"
        android:background="@drawable/actionbar_bg" >

        <ImageButton
            android:id="@+id/dayNightSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#0000"
            android:contentDescription="@string/dayNightSwitchButtonDescription"
            android:onClick="dayNightSwitch"
            android:paddingLeft="5dp"
            android:src="@drawable/ic_menu_view" />

        <TextView
            android:id="@+id/lastModifiedDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="#0000"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lastModifiedTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastModifiedDate"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="#0000"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#0000"
            android:contentDescription="@string/refreshButtonDescription"
            android:onClick="refreshWebview"
            android:paddingRight="5dp"
            android:src="@drawable/ic_menu_refresh" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/adviewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" >

        <com.google.ads.AdView
            android:id="@+id/adview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="a14dba5ee6f0b5f"
            ads:loadAdOnCreate="true"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>